--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Chetan M Badgujar"
+  name             : "Shivraj Bure"
   avatar           : "profile.jpg"
-  bio              : "Assistant Professor, Dept. of Biosystems Engineering & Soil Science, The University of Tennessee"
-  location         : "Knoxville, Tennessee"
+  bio              : "Executive IT SAP ABAP"
+  location         : "Amravati, Maharashtra"
   employer         : #" Dept. of Biosystems Engineering & Soil Science, The University of Tennessee, Knoxville, TN"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=OaemW64AAAAJ&hl=en"
