--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : #" Dept. of Biosystems Engineering & Soil Science, The University of Tennessee, Knoxville, TN"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=OaemW64AAAAJ&hl=en"
-  email            : "chetanmb@utk.edu"
+  email            : "Shivrajgbure1998@gmail.com"
   researchgate     :  "https://www.researchgate.net/profile/Chetan-Badgujar-2"
   uri              :
   bitbucket        :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/chetan-badgujar-264b1690/"
+  linkedin         : "linkedin.com/in/shivraj-bure-8ba7a2205"
   orcid            : "https://orcid.org/0000-0002-7698-2843"
   pinterest        :
   soundcloud       :
