--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shivraj Bure"
-  avatar           : "profil.jpg"
+  avatar           : "profile12.jpg"
   bio              : "Executive IT SAP ABAP"
   location         : "Amravati, Maharashtra"
   employer         : #" Dept. of Biosystems Engineering & Soil Science, The University of Tennessee, Knoxville, TN"
