--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Shivraj Bure"
 title_separator          : "-"
 name                     : &name "Shivraj Bure"
 description              : &description "personal description"
-url                      : https://github.com/Shiv9552/SHIVPORTFOLIO #https://cmbadgujar10.github.io  the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://cmbadgujar10.github.io  #the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "cmbadgujar10/cmbadgujar10.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
